make navigation menu disappear on small screen on click, fix visibility of responses on user interaction in the forms and make them merge into the web-page outlay

--- a/landingpage/static/css/styles.css
+++ b/landingpage/static/css/styles.css
@@ -35,15 +35,17 @@ input.subscribeemail{
 #subscribeResponse{
     margin: 20px auto;
     width: 80%;
+    float: left;
 }
-.alert#subscribeResponse p{
-    margin-top: 0;
+.alert p{
+    margin-top: 0 !important;
+    color: #c13e8d !important;
 }
 #sendInquiryResponse p{
     margin-top: 100px;
     text-align: left;
     width: 100%;
-    color: #c13e8d;
+    color: #fff;
 }
 #sendInquiryResponse{
     overflow: hidden;
